# tractor-crat-dockerfile

./: .gitignore  0001-fixed.patch  Dockerfile  README.md  add_link_args.py  cdylib.py  download.sh  filter_files.py  find_fns.py  fixes.patch  get_target.py  translate.sh  translate_all.py
automation/: Dockerfile  download.sh
automation/apptainer/: apptainer.def  replace_test_case_symlinks.sh  run_apptainer.sh
automation/measurements/measure_idiomaticity/: clippy.toml  clippy_lint_map.py  measure_idiomaticity.py
automation/measurements/measure_unsafety/: Cargo.toml
automation/measurements/measure_unsafety/src/: main.rs  stats.rs
automation/scripts/: aggregate.py  aggregate.sh  create_clippy_lint_map.py  process_all.py  process_all.sh  replace_test_case_symlinks.sh  run_tests.sh  run_tests_all.sh  translate.sh  translate_all.sh  update_c2rust_and_crat.sh  visualize.py  visualize.sh
