[package]
name = "measure_unsafety"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["full", "visit"] }
walkdir = "2.5.0"
